compiler/tests/fail/common/var_initialize_if.jazz
fn test () {
    reg u32 x = 0 if true;
}
